--- a/source/catalog.html
+++ b/source/catalog.html
@@ -21,7 +21,7 @@
 
     </noscript>
   </head>
-  <body class="page">
+  <body class="page  catalog-page">
     <div style="display: none">
       <include src="build/img/svg/sprite.svg"></include>
     </div>
@@ -1159,53 +1159,7 @@
                 </div>
               </li>
 
-              <li class="catalog-cards__item  catalog-card">
-                <div class="catalog-card__image">
-                  <p class="catalog-card__sticker  catalog-card__sticker--new">Новинка</p>
-                  <p class="catalog-card__sticker  catalog-card__sticker--sale">Sale</p>
-                  <p class="catalog-card__sticker  catalog-card__sticker--hit">Хит</p>
-                  <picture>
-                    <source srcset="img/catalog-woman-4-desktop.png" media="(min-width: 1170px)">
-                    <source srcset="img/catalog-woman-4-tablet.png" media="(min-width: 760px)">
-                    <img src="img/popular-woman-3.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
-                  </picture>
-                  <div class="catalog-card__overlay">
-                    <h4 class="catalog-card__overlay-heading">Доступные размеры</h4>
-                    <ul class="catalog-card__measurements-list">
-                      <li class="catalog-card__measurements-item">42</li>
-                      <li class="catalog-card__measurements-item">44</li>
-                      <li class="catalog-card__measurements-item">46</li>
-                      <li class="catalog-card__measurements-item">48</li>
-                      <li class="catalog-card__measurements-item">50</li>
-                      <li class="catalog-card__measurements-item">52</li>
-                      <li class="catalog-card__measurements-item">54</li>
-                      <li class="catalog-card__measurements-item">56</li>
-                      <li class="catalog-card__measurements-item">58</li>
-                    </ul>
-                    <a class="catalog-card__quick-view  js-quick-view" href="#">
-                      <svg>
-                        <use xlink:href="#spr-view"></use>
-                      </svg>
-                      Быстрый просмотр
-                    </a>
-                  </div>
-                </div>
-                <div class="catalog-card__info">
-                  <h3 class="catalog-card__heading">
-                    Костюм медицинский К-74 «Фаина»
-                  </h3>
-                  <p class="catalog-card__price">
-                    900 руб
-                  </p>
-                  <button class="catalog-card__watch">
-                    <svg>
-                      <use xlink:href="#spr-view"></use>
-                    </svg>
-                  </button>
-                </div>
-              </li>
-
-              <li class="catalog-cards__item  catalog-card">
+              <li class="catalog-cards__item  catalog-card  tablet-hidden">
                 <div class="catalog-card__image">
                   <p class="catalog-card__sticker  catalog-card__sticker--new">Новинка</p>
                   <p class="catalog-card__sticker  catalog-card__sticker--sale">Sale</p>
@@ -1249,6 +1203,75 @@
                     </svg>
                   </button>
                 </div>
+              </li>
+
+              <li class="catalog-cards__item  catalog-card  tablet-hidden">
+                <div class="catalog-card__image">
+                  <p class="catalog-card__sticker  catalog-card__sticker--new">Новинка</p>
+                  <p class="catalog-card__sticker  catalog-card__sticker--sale">Sale</p>
+                  <p class="catalog-card__sticker  catalog-card__sticker--hit">Хит</p>
+                  <picture>
+                    <source srcset="img/catalog-woman-2-desktop.png" media="(min-width: 1170px)">
+                    <source srcset="img/catalog-woman-2-tablet.png" media="(min-width: 760px)">
+                    <img src="img/popular-woman-3.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
+                  </picture>
+                  <div class="catalog-card__overlay">
+                    <h4 class="catalog-card__overlay-heading">Доступные размеры</h4>
+                    <ul class="catalog-card__measurements-list">
+                      <li class="catalog-card__measurements-item">42</li>
+                      <li class="catalog-card__measurements-item">44</li>
+                      <li class="catalog-card__measurements-item">46</li>
+                      <li class="catalog-card__measurements-item">48</li>
+                      <li class="catalog-card__measurements-item">50</li>
+                      <li class="catalog-card__measurements-item">52</li>
+                      <li class="catalog-card__measurements-item">54</li>
+                      <li class="catalog-card__measurements-item">56</li>
+                      <li class="catalog-card__measurements-item">58</li>
+                    </ul>
+                    <a class="catalog-card__quick-view  js-quick-view" href="#">
+                      <svg>
+                        <use xlink:href="#spr-view"></use>
+                      </svg>
+                      Быстрый просмотр
+                    </a>
+                  </div>
+                </div>
+                <div class="catalog-card__info">
+                  <h3 class="catalog-card__heading">
+                    Костюм медицинский К-74 «Фаина»
+                  </h3>
+                  <p class="catalog-card__price">
+                    900 руб
+                  </p>
+                  <button class="catalog-card__watch">
+                    <svg>
+                      <use xlink:href="#spr-view"></use>
+                    </svg>
+                  </button>
+                </div>
+              </li>
+            </ul>
+
+            <ul class="catalog-cards__pagination">
+              <li class="catalog-cards__pagination-item"><a href="#">&lt;</a>
+              </li>
+              <li class="catalog-cards__pagination-item  js-active">
+                <a href="#">1</a>
+              </li>
+              <li class="catalog-cards__pagination-item">
+                <a href="#">2</a>
+              </li>
+              <li class="catalog-cards__pagination-item">
+                <a href="#">3</a>
+              </li>
+              <li class="catalog-cards__pagination-item">
+                <a href="#">4</a>
+              </li>
+              <li class="catalog-cards__pagination-item">
+                <a href="#">5</a>
+              </li>
+              <li class="catalog-cards__pagination-item">
+                <a href="#">&gt;</a>
               </li>
             </ul>
           </div>
