--- a/source/profile.html
+++ b/source/profile.html
@@ -80,7 +80,10 @@
       <nav class="main-header__nav main-nav">
         <div class="main-nav__content">
           <a class="main-nav__logo" href="#">
-            <img src="img/logo-desktop.png" width="318" height="50" alt="логотип компании &laquo;Меркурий-Интер-Лаб&raquo;">
+            <picture>
+              <source srcset="img/logo-desktop.png" media="(min-width: 1170px)">
+              <img src="img/logo-tablet.png" alt="логотип компании &laquo;Меркурий-Интер-Лаб&raquo;">
+            </picture>
             <p class="main-nav__logo-description">Медицинская одежда, спецодежда и униформа</p>
           </a>
           <a class="main-nav__open-nav" href="#">
@@ -288,7 +291,8 @@
       <div class="profile__breadcrumbs  breadcrumbs">
         <div class="breadcrumbs__content">
           <a class="breadcrumbs__link">Главная</a>
-          <a class="breadcrumbs__link  breadcrumbs__link--active">Оформление заказа</a>
+          <a class="breadcrumbs__link">Личный кабинет</a>
+          <a class="breadcrumbs__link  breadcrumbs__link--active">Мой профиль</a>
         </div>
       </div>
 
@@ -325,7 +329,7 @@
                 <button class="checkout__edit" type="button"></button>
               </span>
               <span>
-                <input class="checkout__input" type="number" placeholder="ИНН" name="inn">
+                <input class="checkout__input" type="text" placeholder="ИНН" name="inn">
                 <button class="checkout__edit" type="button"></button>
               </span>
               <span>
@@ -354,7 +358,7 @@
                 <button class="checkout__edit" type="button"></button>
               </span>
               <span>
-                <input class="checkout__input" type="number" placeholder="Дом" name="house">
+                <input class="checkout__input" type="text" placeholder="Дом" name="house">
                 <button class="checkout__edit" type="button"></button>
               </span>
             </div>
@@ -643,13 +647,22 @@
             </ul>
             <ul class="footer-info__pay-cards">
               <li class="footer-info__pay-cards-item">
-                <img src="img/visa.png" width="66" height="42" alt="логотип платёжной системы виза">
+                <picture>
+                  <source srcset="img/visa.png" media="(min-width: 1170px)">
+                  <img src="img/visa-tablet.png" alt="логотип платёжной системы виза">
+                </picture>
               </li>
               <li class="footer-info__pay-cards-item">
-                <img src="img/mastercard.png" width="47" height="36" alt="логотип платёжной системы мастеркард">
+                <picture>
+                  <source srcset="img/mastercard.png" media="(min-width: 1170px)">
+                  <img src="img/mastercard-tablet.png" alt="логотип платёжной системы мастеркард">
+                </picture>
               </li>
               <li class="footer-info__pay-cards-item">
-                <img src="img/maestro.png" width="66" height="41" alt="логотип платёжной системы маэстро">
+                <picture>
+                  <source srcset="img/maestro.png" media="(min-width: 1170px)">
+                  <img src="img/maestro-tablet.png" alt="логотип платёжной системы маэстро">
+                </picture>
               </li>
             </ul>
             <div class="footer-info__contacts">
