--- a/source/checkout.html
+++ b/source/checkout.html
@@ -308,8 +308,8 @@
               <input class="checkout__input" type="text" placeholder="Имя" name="first-name">
               <input class="checkout__input" type="text" placeholder="Отчество" name="fathers-name">
               <input class="checkout__input" type="text" placeholder="ИНН" name="inn">
-              <input class="checkout__input" type="email" placeholder="e-mail" name="email">
-              <input class="checkout__input" type="tel" placeholder="Мобильный телефон" name="phone">
+              <input class="checkout__input" type="email" placeholder="e-mail*" name="email">
+              <input class="checkout__input" type="tel" placeholder="Мобильный телефон*" name="phone">
             </div>
           </fieldset>
           <fieldset class="checkout__fieldset">
@@ -321,7 +321,7 @@
               <input class="checkout__input" type="text" placeholder="Дом" name="house">
             </div>
           </fieldset>
-          <button class="checkout__submit  button" type="submit">Оформить предварительный заказ</button>
+          <button class="checkout__submit  button" type="submit">Оформить заказ</button>
         </form>
       </section>
     </main>
