--- a/source/sizes-help.html
+++ b/source/sizes-help.html
@@ -440,7 +440,7 @@
               </div>
             </li>
             <li class="sizes-tables__item">
-              <p class="sizes-tables__description">Как определить свой размер</p>
+              <p class="sizes-tables__description">Классификатор размеров для мужских фигур</p>
               <div class="sizes-tables__tables">
                 <table class="sizes-tables__table-girth">
                   <tbody>
@@ -454,85 +454,85 @@
                       <td>40</td>
                       <td>80</td>
                       <td>60</td>
-                      <td>86</td>
+                      <td>78</td>
                     </tr>
                     <tr>
                       <td>42</td>
                       <td>84</td>
                       <td>64</td>
-                      <td>90</td>
+                      <td>82</td>
                     </tr>
                     <tr>
                       <td>44</td>
                       <td>88</td>
                       <td>68</td>
-                      <td>94</td>
+                      <td>86</td>
                     </tr>
                     <tr>
                       <td>46</td>
                       <td>92</td>
                       <td>72</td>
-                      <td>98</td>
+                      <td>90</td>
                     </tr>
                     <tr>
                       <td>48</td>
                       <td>96</td>
                       <td>76</td>
-                      <td>102</td>
+                      <td>94</td>
                     </tr>
                     <tr>
                       <td>50</td>
                       <td>100</td>
                       <td>80</td>
-                      <td>106</td>
+                      <td>98</td>
                     </tr>
                     <tr>
                       <td>52</td>
                       <td>104</td>
                       <td>80</td>
-                      <td>106</td>
+                      <td>102</td>
                     </tr>
                     <tr>
                       <td>54</td>
                       <td>108</td>
                       <td>84</td>
-                      <td>110</td>
+                      <td>106</td>
                     </tr>
                     <tr>
                       <td>56</td>
                       <td>112</td>
                       <td>93</td>
-                      <td>118</td>
+                      <td>110</td>
                     </tr>
                     <tr>
                       <td>58</td>
                       <td>116</td>
                       <td>98</td>
-                      <td>122</td>
+                      <td>114</td>
                     </tr>
                     <tr>
                       <td>60</td>
                       <td>120</td>
                       <td>103</td>
-                      <td>126</td>
+                      <td>118</td>
                     </tr>
                     <tr>
                       <td>62</td>
                       <td>124</td>
                       <td>108</td>
-                      <td>130</td>
+                      <td>122</td>
                     </tr>
                     <tr>
                       <td>64</td>
                       <td>128</td>
                       <td>113</td>
-                      <td>134</td>
+                      <td>126</td>
                     </tr>
                     <tr>
                       <td>66</td>
                       <td>132</td>
                       <td>118</td>
-                      <td>138</td>
+                      <td>130</td>
                     </tr>
                   </tbody>
                 </table>
@@ -624,21 +624,21 @@
                   </svg>
                   +7 (831) 419-61-06</a>
               </li>
-              <li class="contacts__item">
-                <p class="contacts__address">
-                  <svg>
-                    <use xlink:href="#spr-map"></use>
-                  </svg>
-                  г. Нижний Новгород <br>
-                  603006, пер.Ткачева, д.5 (в р-не пл. "Свободы"). <a class="contacts__link" href="#">Показать на карте</a>
-                </p>
-                <a class="contacts__phone" href="tel:+78314196106">
-                  <svg>
-                    <use xlink:href="#spr-phone"></use>
-                  </svg>
-                  +7 (831) 419-61-06
-                </a>
-              </li>
+              <!--<li class="contacts__item">-->
+                <!--<p class="contacts__address">-->
+                  <!--<svg>-->
+                    <!--<use xlink:href="#spr-map"></use>-->
+                  <!--</svg>-->
+                  <!--г. Нижний Новгород <br>-->
+                  <!--603006, пер.Ткачева, д.5 (в р-не пл. "Свободы"). <a class="contacts__link" href="#">Показать на карте</a>-->
+                <!--</p>-->
+                <!--<a class="contacts__phone" href="tel:+78314196106">-->
+                  <!--<svg>-->
+                    <!--<use xlink:href="#spr-phone"></use>-->
+                  <!--</svg>-->
+                  <!--+7 (831) 419-61-06-->
+                <!--</a>-->
+              <!--</li>-->
             </ul>
           </div>
         </div>
