--- a/source/index.html
+++ b/source/index.html
@@ -548,7 +548,7 @@
                 <p class="popular-product__price">
                   900 руб
                 </p>
-                <a class="popular-product__watch" href="#">
+                <a class="popular-product__watch" href="product.html">
                   <svg>
                     <use xlink:href="#spr-view"></use>
                   </svg>
@@ -594,7 +594,7 @@
                 <p class="popular-product__price">
                   900 руб
                 </p>
-                <a class="popular-product__watch" href="#">
+                <a class="popular-product__watch" href="product.html">
                   <svg>
                     <use xlink:href="#spr-view"></use>
                   </svg>
@@ -640,7 +640,7 @@
                 <p class="popular-product__price">
                   900 руб
                 </p>
-                <a class="popular-product__watch" href="#">
+                <a class="popular-product__watch" href="product.html">
                   <svg>
                     <use xlink:href="#spr-view"></use>
                   </svg>
@@ -686,7 +686,7 @@
                 <p class="popular-product__price">
                   900 руб
                 </p>
-                <a class="popular-product__watch" href="#">
+                <a class="popular-product__watch" href="product.html">
                   <svg>
                     <use xlink:href="#spr-view"></use>
                   </svg>
@@ -732,7 +732,7 @@
                 <p class="popular-product__price">
                   900 руб
                 </p>
-                <a class="popular-product__watch" href="#">
+                <a class="popular-product__watch" href="product.html">
                   <svg>
                     <use xlink:href="#spr-view"></use>
                   </svg>
@@ -778,7 +778,7 @@
                 <p class="popular-product__price">
                   900 руб
                 </p>
-                <a class="popular-product__watch" href="#">
+                <a class="popular-product__watch" href="product.html">
                   <svg>
                     <use xlink:href="#spr-view"></use>
                   </svg>
@@ -992,21 +992,21 @@
                   </svg>
                   +7 (831) 419-61-06</a>
               </li>
-              <li class="contacts__item">
-                <p class="contacts__address">
-                  <svg>
-                    <use xlink:href="#spr-map"></use>
-                  </svg>
-                  г. Нижний Новгород <br>
-                  603006, пер.Ткачева, д.5 (в р-не пл. "Свободы"). <a class="contacts__link" href="#">Показать на карте</a>
-                </p>
-                <a class="contacts__phone" href="tel:+78314196106">
-                  <svg>
-                    <use xlink:href="#spr-phone"></use>
-                  </svg>
-                  +7 (831) 419-61-06
-                </a>
-              </li>
+              <!--<li class="contacts__item">-->
+                <!--<p class="contacts__address">-->
+                  <!--<svg>-->
+                    <!--<use xlink:href="#spr-map"></use>-->
+                  <!--</svg>-->
+                  <!--г. Нижний Новгород <br>-->
+                  <!--603006, пер.Ткачева, д.5 (в р-не пл. "Свободы"). <a class="contacts__link" href="#">Показать на карте</a>-->
+                <!--</p>-->
+                <!--<a class="contacts__phone" href="tel:+78314196106">-->
+                  <!--<svg>-->
+                    <!--<use xlink:href="#spr-phone"></use>-->
+                  <!--</svg>-->
+                  <!--+7 (831) 419-61-06-->
+                <!--</a>-->
+              <!--</li>-->
             </ul>
           </div>
         </div>
