--- a/source/profile.html
+++ b/source/profile.html
@@ -333,11 +333,11 @@
                 <button class="checkout__edit" type="button"></button>
               </span>
               <span>
-                <input class="checkout__input" type="email" placeholder="e-mail" name="email">
+                <input class="checkout__input" type="email" placeholder="e-mail*" name="email">
                 <button class="checkout__edit" type="button"></button>
               </span>
               <span>
-                <input class="checkout__input" type="tel" placeholder="Мобильный телефон" name="phone">
+                <input class="checkout__input" type="tel" placeholder="Мобильный телефон*" name="phone">
                 <button class="checkout__edit" type="button"></button>
               </span>
             </div>
@@ -392,21 +392,21 @@
                   </svg>
                   +7 (831) 419-61-06</a>
               </li>
-              <li class="contacts__item">
-                <p class="contacts__address">
-                  <svg>
-                    <use xlink:href="#spr-map"></use>
-                  </svg>
-                  г. Нижний Новгород <br>
-                  603006, пер.Ткачева, д.5 (в р-не пл. "Свободы"). <a class="contacts__link" href="#">Показать на карте</a>
-                </p>
-                <a class="contacts__phone" href="tel:+78314196106">
-                  <svg>
-                    <use xlink:href="#spr-phone"></use>
-                  </svg>
-                  +7 (831) 419-61-06
-                </a>
-              </li>
+              <!--<li class="contacts__item">-->
+                <!--<p class="contacts__address">-->
+                  <!--<svg>-->
+                    <!--<use xlink:href="#spr-map"></use>-->
+                  <!--</svg>-->
+                  <!--г. Нижний Новгород <br>-->
+                  <!--603006, пер.Ткачева, д.5 (в р-не пл. "Свободы"). <a class="contacts__link" href="#">Показать на карте</a>-->
+                <!--</p>-->
+                <!--<a class="contacts__phone" href="tel:+78314196106">-->
+                  <!--<svg>-->
+                    <!--<use xlink:href="#spr-phone"></use>-->
+                  <!--</svg>-->
+                  <!--+7 (831) 419-61-06-->
+                <!--</a>-->
+              <!--</li>-->
             </ul>
           </div>
         </div>
